--- a/cloudformation/codepipeline-stack-template.yml
+++ b/cloudformation/codepipeline-stack-template.yml
@@ -57,7 +57,7 @@ Resources:
                     Provider: "CodeBuild"
                     Version: 1
                   Configuration:
-                    ProjectName: "ionut project"
+                    ProjectName: "ionut_project"
                   OutputArtifacts:
                     - Name: "BuildArtifact-QA"
 
